<resources>
    <string name="app_name">TIp Calculator</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How Was the Service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="okay_15">Okay (15%)</string>
    <string name="round_the_tip">Round the Tip?</string>
    <string name="calculate">Calculate</string>
</resources>